some css changes

--- a/src/components/InboxMessage/InboxMessage.scss
+++ b/src/components/InboxMessage/InboxMessage.scss
@@ -28,9 +28,8 @@
 .message-tags {
   display: flex;
   align-items: center;
-  background: var(--bgLight);
-  padding: 0.5em 0em;
   border-radius: 5px;
+  margin-top: 0.8em;
 }
 @media screen and (max-width: 623px) {
   .message-tags {
