--- a/src/components/ConfirmMessages/ConfirmMessages.scss
+++ b/src/components/ConfirmMessages/ConfirmMessages.scss
@@ -46,13 +46,13 @@
   display: flex;
   align-items: center;
   font-size: 0.7rem;
-  background-color: var(--bgLight);
-  color: white;
+  background-color: var(--bgLighter);
+  color: var(--text);
   padding: 5px 10px;
   border-radius: 3px;
 
   p {
-    color: white;
+    color: var(--text);
   }
 }
 
