--- a/src/components/Forms/forms.scss
+++ b/src/components/Forms/forms.scss
@@ -6,7 +6,7 @@
 .field-group {
   display: flex;
   flex-direction: column;
-  margin: 1.5em 0;
+  margin-bottom: 1em;
   width: 100%;
 }
 
@@ -33,7 +33,7 @@
     font-style: italic;
   }
   &:focus {
-    background-color: var(--bg);
+    background-color: var(--bgLight);
   }
 }
 
