add tag filtering reading list

--- a/src/Pages/Dashboard/ReadingList/ReadingList.scss
+++ b/src/Pages/Dashboard/ReadingList/ReadingList.scss
@@ -75,7 +75,7 @@
   margin: 0.5em;
   &.active {
     background-color: var(--success);
-    color: var(--primary);
+    color: white;
     box-shadow: 0px 2px 15px rgba(black, 0.3);
   }
 }
