working on tags for RL

--- a/src/Pages/Dashboard/ReadingList/ReadingList.scss
+++ b/src/Pages/Dashboard/ReadingList/ReadingList.scss
@@ -21,6 +21,8 @@
     padding: 1em;
     box-shadow:0px 2px 40px rgba(black, 0.05);
     border-radius: 5px;
+    position: relative;
+    margin-bottom: 2em;
   }
 
   &-header {
@@ -32,6 +34,23 @@
   &-list {
     width: 100%;
     max-width: 1200px;
+  }
+}
+
+.reading-list-tags {
+  position: absolute;
+  right: 0;
+
+  button {
+    background: var(--bgLight);
+    padding: 1em;
+    border-radius: 20px;
+    box-shadow: 0px 5px 8px rgba(black, 0.3);
+    transition: all 0.2s ease;
+    &:hover {
+      background: var(--accentBg);
+      color: white;
+    }
   }
 }
 
@@ -55,13 +74,13 @@
 .reading-time {
   padding: 0.5em;
   color: var(--text);
-    font-size: 0.8rem;
-    margin: 0 0.5em;
-    white-space: nowrap;
-    span {
-      color: var(--accent);
-      font-weight: bold;
-    }
+  font-size: 0.8rem;
+  margin: 0 0.5em;
+  white-space: nowrap;
+  span {
+    color: var(--accent);
+    font-weight: bold;
+  }
 }
 
 .reading-list-filter {
