--- a/src/index.scss
+++ b/src/index.scss
@@ -224,6 +224,12 @@ ul {
   color: var(--textLight);
 }
 
+.bg {
+  background: var(--bgLight);
+  padding: 1em;
+  border-radius: 5px;
+}
+
 
 .mw-500 {
   width: 100%;
