--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -23,8 +23,8 @@
   text-transform: uppercase;
   white-space: nowrap;
   outline: none;
-   
-  height: 100%;
+  display: flex;
+  height: 100%; 
   font-size: 0.7rem;
 
   i { 
@@ -111,7 +111,7 @@
   background: var(--secondaryGradient);
   color: white;
   transition: all 0.2s ease;
-
+  padding: 1.5em 1em;
   border: none;
   box-shadow: 0px 2px 10px rgba(black, 0.2);
   &:hover {
