add and remove tags from stories

--- a/src/Pages/TagsManager/TagsManager.scss
+++ b/src/Pages/TagsManager/TagsManager.scss
@@ -37,9 +37,9 @@
 }
 
 .tag-small {
-  background: var(--accentBg);
+  background: var(--bgLighter);
   padding: 0 0.5em;
-  color: white;
+  color: var(--text);
   border-radius: 20px;
   width: fit-content;
   box-shadow: 0px 5px 8px rgba(black, 0.3);
@@ -47,7 +47,31 @@
   padding-bottom: 3px;
   font-weight: bold;
   transition: all 0.2s ease;
-  position: relative;  
+  position: relative;
+
+  &:hover {
+    &:after {
+      opacity: 1;
+    }
+  }
+  
+  &:after {
+    content: "x";
+    display: flex;
+    justify-content: center;
+    background-color: red;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 2;
+    padding: 0 0.5em;
+    opacity: 0;
+    transition: all 0.2s ease;
+    border-radius: 20px;
+
+  }
 }
 
 .tag-item.exists {
@@ -56,6 +80,15 @@
 
   i, p {
     color: var(--accentBg);
+
+  }
+}
+
+.tag-item.to-add {
+  background: var(--green);
+  border: 2px solid var(--white);
+  i, p {
+    color: var(--white);
 
   }
 }
