--- a/src/Pages/Dashboard/ReadingList/ReadingList.scss
+++ b/src/Pages/Dashboard/ReadingList/ReadingList.scss
@@ -22,7 +22,7 @@
     box-shadow:0px 2px 40px rgba(black, 0.05);
     border-radius: 5px;
     position: relative;
-    margin-bottom: 2em;
+    margin-bottom: 3em;
   }
 
   &-header {
@@ -39,8 +39,10 @@
 
 .reading-list-tags {
   position: absolute;
-  right: 1em;
-
+  right: 0.5em;
+  padding: 0.5em;
+  bottom: -25px;
+  
   button {
     background: var(--green);
     padding: 1em;
@@ -118,6 +120,14 @@
     color: var(--text);
     background-color: var(--bgLight);
     border-radius: 50%;
+  }
+}
+
+.tag-list {
+  flex-wrap: wrap;
+  margin-top: 1em;
+  p {
+    white-space: nowrap;
   }
 }
 
