--- a/src/components/SubredditPost/SubredditPost.scss
+++ b/src/components/SubredditPost/SubredditPost.scss
@@ -1,7 +1,7 @@
  
 .subreddit-title {
   text-overflow: ellipsis;
-  height: 90px;
+  height: 120px;
   width: 100%;
   font-weight: 600;
   font-size: 1.2rem;
@@ -26,6 +26,11 @@
       color: var(--text);
     }
   }
+}
+
+.post-link:hover {
+  text-decoration: underline;
+  color: var(--accentBg);
 }
 
 .post {
