--- a/src/components/SelectField/SelectField.scss
+++ b/src/components/SelectField/SelectField.scss
@@ -2,15 +2,16 @@
 .select {
   position: relative;
   display: flex;
-  width: 200px;
+  width: 250px;
   height: 100%;
-  background-color: var(--bgLight);
+  max-height: 45px;
+  background-color: var(--bgLighter);
   margin-right: 1em;
   padding: 5px 10px;
   border-radius: 3px;
   color: var(--text);
   font-size: 0.9rem;
-
+  white-space: nowrap;
 }
 
 .select-dropdown {
