--- a/src/components/PostFetchComp/PostFetchComp.scss
+++ b/src/components/PostFetchComp/PostFetchComp.scss
@@ -76,7 +76,8 @@
 
   .mobile-fetch-inputs {
     flex-direction: column;
-    height: 100%;
+    
+    height: 140px;
 
     >div {
       width: 100%;
