--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -26,6 +26,7 @@
   outline: none;
   display: flex;
   height: 100%; 
+  max-height: 35px;
   font-size: 0.7rem;
   justify-content: center;
   i { 
