--- a/src/components/PostFetchComp/PostFetchComp.scss
+++ b/src/components/PostFetchComp/PostFetchComp.scss
@@ -41,7 +41,7 @@
 .post-list {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, 300px);
+  grid-template-columns: repeat(auto-fill, minmax(300px, 600px));
   grid-column-gap: 5px;
   grid-row-gap: 10px; 
   justify-content: space-between;
@@ -66,6 +66,7 @@
 }
 
 @media screen and (max-width: 603px) {
+
   .post-fetch-header {
     flex-direction: column;
   }
