--- a/src/components/SubredditPost/SubredditPost.scss
+++ b/src/components/SubredditPost/SubredditPost.scss
@@ -1,11 +1,19 @@
  
 .subreddit-title {
-  text-overflow: ellipsis;
-  height: 120px;
   width: 100%;
-  font-weight: 600;
   font-size: 1.2rem;
-  padding: 0.5em;
+  font-weight: bold;
+  color: var(--text);
+}
+
+.subreddit-title-wrapper {
+  padding: 1em 0;
+  height: 100%;
+  margin-bottom: 2em;
+}
+
+.subreddit-header {
+  height: 43px;
 }
 
 .post-actions {
@@ -19,13 +27,18 @@
     height: 45px;
     border-radius: 50%;
     transition: all 0.2s ease;
-
     font-size: 1rem;
     &:hover {
       background-color: var(--white-60);
       color: var(--text);
     }
   }
+}
+
+.author {
+  border-radius: 3px;
+  background: var(--bg);
+  padding: 0.5em 1em;
 }
 
 .post-link:hover {
@@ -39,33 +52,33 @@
   background-color: var(--bgLight);
   border-radius: 5px;
   box-shadow: 0px 2px 3px rgba(black, 0.3);
-  margin-bottom: 1em;
   overflow: hidden;
-   
-  .upvotes {
-    width: 100%;
-    background: var(--primeGradient);
-    padding: 1em;
-     
-    height: 60px;
-    h1,
-    i {
-      color: var(--white);
-      font-size: 1.5rem;
-    }
+  padding: 0.5em;
+  border: 2px solid transparent;
+}
+
+.upvotes {
+  width: fit-content;
+  background: var(--primeGradient);
+  padding: 1.3em 0.8em;
+  height: 100%;
+  border-radius: 3px;
+  box-shadow: 0px 2px 4px rgba(black, 0.3);
+  margin-right: 1em;
+  h1 {
+    color: var(--white);
+    font-size: 1.5rem;
   }
 
-  .subreddit-title {
-    font-weight: bold;
-    font-size: 1.2rem;
-    color: var(--text);
+  i {
+    color: var(--white);
+    font-size: 1.3rem;
   }
 }
 
-
 .active-post-select {
   box-shadow: 0px 2px 20px rgba(#DE3A11, 0.5);
-  
+  border: 2px solid #DE3A11;
 
   .upvotes {
     background:var(--redBg) !important;
@@ -78,57 +91,53 @@
 }
 
 .sub-detail {
-  background-color: var(--bgLighter);
-  padding: 5px 20px;
-  border-radius: 30px;
-  color: var(--text);
+  color: var(--textLight);
+  i {
+    color: var(--textLight);
+  }
 }
 
 .post-flair {
-  font-weight:bold;
-  font-size: 0.8rem;
   padding: 0.3em 0.7em ;
-  border-radius: 20px;
-  display: flex;
-  align-self: flex-start;
+  border-radius: 3px;
+  height: 100%;
+  background-color: var(--bg);
+
+  p {
+    font-size: 0.9rem;
+    font-weight: bold;
+    color: var(--textLight);
+
+  }
 }
 
-.misc-flair {
-  color: var(--text);
-  background-color: var(--bgLighter);
+.subreddit-viewed {
+  background-image: linear-gradient(to right top, #f2a96c, #fbb65b, #fdc547, #f8d731, #ebea12);
+  i {
+    color: white;
+  }
 }
+
+.info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
 
 .has-been-used {
   .upvotes {
-    background: var(--green) !important;
+    background: var(--greenGradient) !important;
   }
 }
 
 .has-been-used-text {
-  font-size: 0.8rem;
-  font-weight: 700;
-  padding: 0 0.5em;
-  border-radius: 5px;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  p {
+  background: var(--greenGradient);
+  i {
     color: white;
-  }
-}
-.reading-info {
-  width: 100%;
-  padding: 0.5em;
-  div {
-    color: var(--text);
-    font-size: 0.8rem;
-    margin: 0 0.5em;
-
-    span {
-      color: var(--accent);
-      font-weight: bold;
-    }
   }
 }
 
@@ -142,13 +151,15 @@
   }
 
   p {
-    color: white;
+    color: var(--textLight);
     font-weight: bold;
     margin-left: 5px;
   }
 }
 
 .ratio-thumbs {
+  color: var(--textLight);
+  display: flex;
   .fa-thumbs-down {
     transform: rotateY(180deg);
     margin-left: -3px;
@@ -160,4 +171,52 @@
   background: -webkit-linear-gradient(to right, #feb47b, #ff7e5f) !important;  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #feb47b, #ff7e5f) !important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
+}
+@media screen and (max-width: 603px) {
+  .upvotes {
+    flex: 1;
+  }
+
+  .subreddit-header {
+    flex-direction: column;
+    height: 100%;
+
+    > section {
+      height: 48px;
+    }
+    > section:first-child {
+      width: 100%;
+      margin-bottom: 0.5em;
+    }
+
+    .author {
+      margin-left: 0;
+    }
+  }
+
+  .subreddit-footer {
+    flex-direction: column;
+
+    > div:first-child {
+      width: 100%;
+      margin-bottom: 0.5em;
+      flex-direction: column;
+      align-items: flex-start;
+
+      p {
+        background-color: var(--bg);
+        width: 100%;
+        margin-left: 0;
+        padding: 0.3em 1em;
+        border-radius: 5px;
+        margin-bottom: 5px;
+      }
+    }
+
+    >div:last-child {
+      width: 100%;
+
+      justify-content: flex-end;
+    }
+  }
 }
