--- a/src/index.scss
+++ b/src/index.scss
@@ -3,27 +3,27 @@
 @import './assets/normalize.css';
 
 :root {
-  --black: #1F2933;
-  --black-20: #323F4B;
-  --black-40: #52606D;
-  --black-60: #616E7C;
-  --white: #fff;
-  --white-20: #F5F7FA;
-  --white-40: #E4E7EB;
-  --white-60: #CBD2D9;
-  --blue: #01337D;
-  --blue-20: #0552B5;
-  --blue-40: #47A3F3;
-  --accent-secondary: #0FB5BA;
-  --red: #DE3A11;
-  --accent-warning: #F35627;
-  --yellow: #FADB5F;
-  --green: #3EBD93;
+  --black: rgb(31, 41, 51);
+  --black-20: rgb(51, 64, 77);
+  --black-40: rgb(82, 96, 109);
+  --black-60: rgb(97, 110, 124);
+  --white: rgb(255, 255, 255);
+  --white-20: rgb(245, 247, 250);
+  --white-40: rgb(228, 231, 235);
+  --white-60: rgb(203, 210, 217);
+  --blue: rgb(1, 51, 125);
+  --blue-20: rgb(5, 82, 181);
+  --blue-40: rgb(71, 163, 243);
+  --accent-secondary: rgb(15, 181, 186);
+  --red: rgb(222, 58, 17);
+  --accent-warning: rgb(243, 86, 39);
+  --yellow: rgb(250, 219, 95);
+  --green: rgb(62, 189, 147);
   --blueGradient: linear-gradient(214deg, rgba(63,146,240,1) 0%, rgba(10,104,210,1) 100%);
   --greenGradient: linear-gradient(31deg, rgba(62,189,147,1) 0%, rgba(31,214,154,1) 100%);
   --proGradient: linear-gradient(270deg, rgba(216,38,255,1) 0%, rgba(83,15,135,1) 100%);
-  --forest: #0C6B58;
-  --forest-20: #199473;
+  --forest: rgb(12, 107, 88);
+  --forest-20: rgb(25, 148, 115);
   // backgrounds
   --bg: var(--white);
   --bgLighter: var(--white-20);
