--- a/src/layouts/DashboardNav/DashboardNav.scss
+++ b/src/layouts/DashboardNav/DashboardNav.scss
@@ -10,18 +10,11 @@
 }
 
 .dash-nav {
-  min-width: 230px;
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  height: 60px;
+  background-color: var(--black);
   justify-content: center;
-  height: 100%;
-  min-height: 100vh;
-  background-color: var(--bgLight);
-  position: relative;
-  bottom: 0;
-   
-  border-right: 2px solid var(--bg);
-
 }
 
 .collapsed {
@@ -30,7 +23,6 @@
 }
 
 .dash-nav-item {
-  color: var(--secondary);
   position: relative;
   display: flex;
   align-items: center;
@@ -41,35 +33,21 @@
   margin: 0.5em;  
   padding: 0.3em;
   border-radius: 20px;
-  opacity: 0.7;
+  opacity: 0.4;
   p {
     white-space: nowrap;
-    color: var(--text);
+    color: var(--white);
+    font-weight: bold;
 
   }
-
-  i {
-    margin-right: 1em;
-    color: var(--text);
-  }
-
   &:hover {
     opacity: 1;
   }
 }
 
 .dash-nav-item-active  {
-  background: var(--primeGradient);
-  box-shadow: 0px 2px 10px rgba(63,146,240, 0.5);
   opacity: 1;
-  p, 
-  i {
-    color: white;
-  }
-  .nav-indicator {
-
-    opacity: 1;
-  }
+  font-weight: bold;
 }
 
 .nav-indicator {
