--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -60,7 +60,7 @@
   width: 100%;
   max-width: 130px;
   height: 50px;
-  background-color: var(--bg);
+  background-color: var(--white);
   border-radius:5px;
   border:1.5px solid transparent;
 
