--- a/src/layouts/Tabs/Tabs.scss
+++ b/src/layouts/Tabs/Tabs.scss
@@ -1,22 +1,30 @@
-.tabs-wrapper {
-  display: flex;
-  width: fit-content;
-  flex-wrap: wrap;
-  padding: 0.5em;
-  background: var(--bgLight);
-  border-radius: 8px;
-  margin: 0.5em 0;
+.tabs {
+  width: 150px;
 }
 
-@media screen and (max-width: 425px) {
-  .tabs-wrapper {
-    .tabs-item {
-      width: 100%; 
+.tab {
+  margin: 0.5em 0;
+  transition: all 0.2s ease;
 
-      a {
-        display: flex;
-        justify-content: center;
-      }
+  a {
+    color: var(--text);
+    opacity: 0.6;
+    text-decoration: none;
+    transition: all 0.2s ease;
+
+  }
+
+  &:hover {
+    
+    a {
+      opacity: 1;
+      font-weight: bold;
     }
   }
+}
+
+.tab-active {
+  opacity: 1 !important;
+  font-weight: bold;
+
 }
