--- a/src/Pages/Dashboard/ReadingList/ReadingList.scss
+++ b/src/Pages/Dashboard/ReadingList/ReadingList.scss
@@ -1,40 +1,65 @@
  
 .reading-list {
-  &-author {
-    font-weight: 400;
+  &-item {
+    border-bottom: 1px solid var(--bg);
+    padding: 0.5em 0;
   }
+}
 
-  &-body {
-    display: none;
-    
-    p {
-      color: var(--text);
-      font-size: 0.9rem;
-      white-space: pre-wrap;
-      line-height: 1.6em;
+.reading-list-author {
+  color: var(--text) !important;
+}
+
+.reading-list-item-dropdown .dropdown {
+  position: absolute;
+  background: var(--bgLight);
+  border-radius: 5px;
+  border: 2px solid var(--bgLighter);
+  width: 150px;
+  color: var(--text);
+  right: 0;
+  top: 2em;
+  display: none;
+  z-index: 2;
+  button {
+    padding: 1em;
+    width: 100%;
+    background-color: transparent;
+
+    &:hover {
+      background-color: var(--white-40);
+  
     }
   }
+}
+.dropdown.extended {
+}
 
-  &-item {
-    margin: 1em 0;
-    background-color: var(--bgLight);
-    padding: 1em;
-    box-shadow:0px 2px 40px rgba(black, 0.05);
-    border-radius: 5px;
-    position: relative;
-    margin-bottom: 3em;
+.reading-list-item-dropdown {
+  width: 57px;
+  padding: 0.3em;
+  display: flex;
+  justify-content: center;
+  border-radius: 5px;
+  position: relative;
+
+  
+
+  i {
+    color: var(--textLight);
   }
 
-  &-header {
-    display: flex;
-    justify-content: space-between;
-
+  &:hover {
+    background-color: var(--bgLighter);
   }
+}
 
-  &-list {
-    width: 100%;
-    max-width: 1200px;
-  }
+.reading-list-title {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: var(--link);
+  text-decoration: underline;
 }
 
 .reading-list-tags {
@@ -90,7 +115,7 @@
   text-transform: capitalize;
   color: var(--text);
   border: none;
-  background-color: var(--bgLight);
+  background-color: var(--bg);
   border-radius: 20px;
   outline: none;
   padding: 0.4em 0.9em;
@@ -118,7 +143,7 @@
     min-width: 30px;
     min-height: 30px;
     color: var(--text);
-    background-color: var(--bgLight);
+    background-color: var(--bg);
     border-radius: 50%;
   }
 }
