--- a/src/layouts/Tabs/Tabs.scss
+++ b/src/layouts/Tabs/Tabs.scss
@@ -5,22 +5,21 @@
 .tab {
   margin: 0.5em 0;
   transition: all 0.2s ease;
-
-  a {
+  a,
+  button {
     color: var(--text);
-    opacity: 0.6;
+    opacity: 0.8;
     text-decoration: none;
     transition: all 0.2s ease;
+    text-align: left;
 
-  }
-
-  &:hover {
-    
-    a {
+    &:hover {
       opacity: 1;
       font-weight: bold;
     }
   }
+
+
 }
 
 .tab-active {
