--- a/src/components/SubmittedItem/SubmittedItem.scss
+++ b/src/components/SubmittedItem/SubmittedItem.scss
@@ -5,13 +5,12 @@
 }
 
 .submitted-headers {
-  margin: 1em 0;
   padding: 1em 0.5em;
   p {
     font-weight: bold;
     color: var(--text);
   }
-  border-bottom: 1.5px solid var(--bgLight);
+  border-bottom: 2px solid var(--bg);
 }
 
 .submitted-item-wrapper {
