--- a/src/Pages/Dashboard/ReadingList/ReadingList.scss
+++ b/src/Pages/Dashboard/ReadingList/ReadingList.scss
@@ -2,11 +2,16 @@
 .reading-list {
   &-item {
     padding: 0.5em 0;
+
   }
 }
 
 .reading-list-item-wrapper {
   border-bottom: 1px solid var(--bg);
+  transition: all 0.2s ease;
+  &:hover {
+    background: var(--off-blue);
+  }
 
 }
 .reading-list-author {
