--- a/src/layouts/NavWidget/NavWidget.scss
+++ b/src/layouts/NavWidget/NavWidget.scss
@@ -8,16 +8,20 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  
+  z-index: 4;
+
 }
 
 .dashboard-topbar {
+  position: sticky;
+  top: 0;
   height: 60px;
   background-color: var(--bgLight);
   width: 100%;
   padding: 0.5em 1em;
   align-items: center;
   display: flex;
+  z-index: 3;
 }
 
 .profile-image.small {
@@ -47,7 +51,7 @@
   width: 100%;
   display: none;
   padding-top:2.5em;
-  z-index:2;
+  z-index:4;
   margin-top: 0;
 }
 
