almost done inbox

--- a/src/components/InboxChat/InboxChat.scss
+++ b/src/components/InboxChat/InboxChat.scss
@@ -21,7 +21,7 @@
 }
 
 .chat-body-light {
-  background-color: var(--bgLight);
+  background-color: var(--bg);
   border-bottom-right-radius: 0px;
 }
 
