--- a/src/components/Forms/forms.scss
+++ b/src/components/Forms/forms.scss
@@ -56,7 +56,8 @@
   background-color: var(--bgLight);
   padding: 1em;
   border-radius: 5px;
-  box-shadow: 0px 2px 10px rgba(black, 0.2);
+  border: 2px solid var(--bg);
+
 }
 
 .chat-input {
