--- a/src/index.scss
+++ b/src/index.scss
@@ -121,6 +121,12 @@ p {
   margin-right: auto;
 }
 
+.ellipses {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .container {
   max-width: 1300px;
   width: 100%;
