doing more stuff

--- a/src/components/ContactsList/ContactsList.scss
+++ b/src/components/ContactsList/ContactsList.scss
@@ -98,7 +98,7 @@
 
 details[open] {
   > p {
-    background: var(--white-20);
+    background: var(--white);
     padding: 0.5em;
     border-radius: 5px;
   }
