--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -11,6 +11,8 @@
   border-radius: 5px;
   border: 2px solid var(--bgLighter);
   align-self: flex-start;
+  background-color: white;
+
 }
 
 .drop-comp-main {
