--- a/src/layouts/SiteSaveStatus/SiteSaveStatus.scss
+++ b/src/layouts/SiteSaveStatus/SiteSaveStatus.scss
@@ -1,11 +1,11 @@
  
 .site-save-status {
-  background: var(--yellow);
+  background: var(--black);
   padding: 0.5em 1em;
   border-radius: 5px;
   box-shadow: 0px 2px 15px rgba(black, 0.2);
   p {
-    color: var(--black-20);
+    color: var(--white);
     font-weight: 700;
   }
 }
