--- a/src/layouts/NavWidget/NavWidget.scss
+++ b/src/layouts/NavWidget/NavWidget.scss
@@ -59,21 +59,20 @@
   width: 100%;
   background-color: var(--bgLight);
   box-shadow: 0px 3px 30px rgba(black, 0.2);
-  padding: 1em;
   border-radius: 5px;
   height: 100%;
-  li {
-    margin: 0.5em 0;
-  }
+
 }
 
 .dropdown-link {
   text-decoration: none;
   color: var(--text);
   transition: all 0.2s ease;
-
+  padding: 1em;
+  display: block;
   &:hover {
-    text-decoration: underline;
+    font-weight: bold;
+    background-color: var(--off-blue);
   }
 }
 
