--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -66,7 +66,7 @@
   width: 100%;
   max-width: 130px;
   height: 50px;
-  background-color: var(--white);
+  background-color: var(--bg);
   border-radius:5px;
   border:2px solid var(--bg);
 
