--- a/src/layouts/DashboardNav/DashboardNav.scss
+++ b/src/layouts/DashboardNav/DashboardNav.scss
@@ -16,13 +16,8 @@
   background-color: var(--black);
   justify-content: center;
   position: sticky;
-  top: 60px;
+  top: 75px;
   z-index: 2;
-}
-
-.collapsed {
-  min-width: 0;
-  margin-left: -200px;
 }
 
 .dash-nav-item {
@@ -63,10 +58,8 @@
   margin-left:  1em;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 860px) {
   .dash-nav {
-    position: fixed;
-    bottom: 0;
-    z-index: 3;
+    display: none;
   }
 }
