--- a/src/layouts/NavWidget/NavWidget.scss
+++ b/src/layouts/NavWidget/NavWidget.scss
@@ -53,6 +53,7 @@
   padding-top:2.5em;
   z-index:4;
   margin-top: 0;
+
 }
 
 .dashboard-dropdown {
@@ -61,6 +62,7 @@
   box-shadow: 0px 3px 30px rgba(black, 0.2);
   border-radius: 5px;
   height: 100%;
+  overflow: hidden;
 
 }
 
