--- a/src/layouts/Navbar/Navbar.scss
+++ b/src/layouts/Navbar/Navbar.scss
@@ -174,6 +174,10 @@
     
   }
 
+  .nav-dropdown {
+    flex-direction: column;
+    align-items: flex-end;
+  }
   
 }
 
@@ -185,8 +189,6 @@
   transition: all 0.2s ease;
   display: flex;
   justify-content: space-between;
-  flex-direction: column;
-  align-items: flex-end;
 
   button {
     margin: 0.5em 0;
@@ -267,10 +269,20 @@
 
 .nav-dropdown.desktop {
   position: relative;
+
   .nav-item-dropdown {
     position: absolute;
     right: 0;
     top: 30px;
+  }
+
+  button {
+    margin: 0.5em 0;
+
+    p,
+    i {
+      color: var(--text);
+    }
   }
 }
 
