--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -141,8 +141,8 @@
   background-color: var(--bgLight);
 }
 
-.btn-primary.disabled,
-.btn-green.disabled {
+.btn-primary[disabled],
+.btn-green[disabled] {
   background: rgb(62,76,89);
   background: linear-gradient(31deg, rgba(62,76,89,1) 0%, rgba(154,165,177,1) 100%);
   cursor: not-allowed;
