restyle notifications and add pagination

--- a/src/components/Forms/forms.scss
+++ b/src/components/Forms/forms.scss
@@ -85,7 +85,7 @@
   resize: vertical;
   line-height: 1.8em;
   font-size: 0.8rem;
-  background-color: var(--inputBg);
+  background-color: var(--bg);
   border: none;
   &::placeholder {
     color: var(--textLight);
