change pagination colours to match document theme

--- a/src/components/PostFetchComp/PostFetchComp.scss
+++ b/src/components/PostFetchComp/PostFetchComp.scss
@@ -38,6 +38,20 @@
 
 .MuiPagination-ul {
   flex-direction: column;
+
+  li {
+    & button {
+      color: var(--text);
+    }
+
+    & div {
+      color: var(--text);
+    }
+  }
+}
+
+.Mui-selected {
+  background: var(--bgLight) !important;
 }
 
 .MuiPagination-root {
