--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -7,6 +7,7 @@
   transition: all 0.2s ease;
   display: flex;
   justify-content: center;
+  align-items: center;
   i { 
     margin-right: 10px;
   }
