--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,7 @@
   --greenGradient: linear-gradient(31deg, rgba(62,189,147,1) 0%, rgba(31,214,154,1) 100%);
   --proGradient: linear-gradient(270deg, rgba(216,38,255,1) 0%, rgba(83,15,135,1) 100%);
   --redGradient: linear-gradient(to right top, #de3a11, #e6491c, #ef5727, #f76431, #ff703b);
+  --darkGradient: linear-gradient(to right, #051937, #0c2b56, #143d77, #1d519a, #2666bf);
   --forest: rgb(12, 107, 88);
   --forest-20: rgb(25, 148, 115);
   --off-blue: rgb(232, 236, 241);
