--- a/src/components/UserInbox/UserInbox.scss
+++ b/src/components/UserInbox/UserInbox.scss
@@ -7,7 +7,11 @@
   position: relative;
   display: flex;
   flex-direction: column;
+    width: 100%;
+  background: var(--bgLight);
 }
+
+
 .inbox-message-wrapper main {
   height: auto;
   
