--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -1,6 +1,5 @@
- 
 .btn-primary {
- background: var(--primeGradient);
+  background: var(--primeGradient);
   color: white;
   padding: 1em;
   font-size: 0.8rem;
@@ -8,7 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  i { 
+  i {
     margin-right: 10px;
   }
 
@@ -20,32 +19,32 @@
 .btn {
   border: none;
   color: var(--white);
-  border-radius:5px;
+  border-radius: 5px;
   font-weight: bold;
   text-transform: uppercase;
   white-space: nowrap;
   outline: none;
   display: flex;
-  height: 100%; 
+  height: 100%;
   max-height: 40px;
   font-size: 0.7rem;
   justify-content: center;
-  i { 
+  i {
     margin-right: 10px;
   }
 }
 
 .btn-secondary {
   background-color: var(--bgLight);
-  border: 2px solid hsla(201, 87%, 54%,1);
+  border: 2px solid hsla(201, 87%, 54%, 1);
   padding: 1em;
   font-size: 0.7rem;
-  color: hsla(201, 87%, 54%,1);
+  color: hsla(201, 87%, 54%, 1);
   transition: all 0.2s ease;
   height: 50px;
 
   &:hover {
-    background-color: hsla(201, 87%, 54%,1);
+    background-color: hsla(201, 87%, 54%, 1);
     color: white;
   }
 }
@@ -61,20 +60,18 @@
   font-size: 0.7rem;
   font-weight: 700;
   box-shadow: none;
-  padding: 1em;
-  margin-left: 0.5em;
+  padding: 0.5em;
   transition: all 0.2s ease;
+  display: flex;
+  align-items: center;
   width: 100%;
-  max-width: 130px;
   height: 50px;
   background-color: var(--bg);
-  border-radius:5px;
-  border:2px solid var(--bg);
+  border-radius: 5px;
+  border: 2px solid var(--bg);
 
   &:hover {
     color: var(--blue-40);
-    border:1.5px solid var(--blue-40);
-
   }
 }
 
@@ -94,7 +91,6 @@
   }
 }
 
-
 .btn-select {
   display: flex;
   justify-content: center;
@@ -102,11 +98,11 @@
   width: 40px;
   height: 40px;
   color: var(--text);
-  border-radius:50%;
+  border-radius: 50%;
   font-size: 1rem;
   box-shadow: none;
   background-color: var(--bg);
-   
+
   transition: all 0.2s ease;
 
   &:hover {
@@ -124,9 +120,9 @@
   transition: all 0.2s ease;
   border: none;
   box-shadow: 0px 2px 10px rgba(black, 0.2);
-  
+
   &:hover {
-    background-color: darken(#3EBD93, 5%);
+    background-color: darken(#3ebd93, 5%);
     box-shadow: 0px 2px 10px rgba(black, 0.4);
 
     border: none;
@@ -137,15 +133,19 @@
 .btn-increment {
   border: none;
   padding: 0.5em;
-  border-radius:5px;
+  border-radius: 5px;
   width: 70px;
   background-color: var(--bgLight);
 }
 
 .btn-primary[disabled],
 .btn-green[disabled] {
-  background: rgb(62,76,89);
-  background: linear-gradient(31deg, rgba(62,76,89,1) 0%, rgba(154,165,177,1) 100%);
+  background: rgb(62, 76, 89);
+  background: linear-gradient(
+    31deg,
+    rgba(62, 76, 89, 1) 0%,
+    rgba(154, 165, 177, 1) 100%
+  );
   cursor: not-allowed;
 }
 .chat-send {
@@ -169,12 +169,12 @@
   background: var(--bg);
   border: none;
   padding: 1em;
-  margin:0 1em;
-  border-radius:5px;
+  margin: 0 1em;
+  border-radius: 5px;
   text-transform: uppercase;
   font-weight: bold;
-  color: var(--text); 
-   
+  color: var(--text);
+
   outline: none;
   font-size: 0.6rem;
 
@@ -182,7 +182,6 @@
     font-size: 0.8rem;
   }
 }
-
 
 .chat-action.primary {
   background-color: var(--bgLight);
@@ -197,7 +196,7 @@
 .chat-action.danger {
   background-color: transparent;
   color: var(--redBg);
-  border-radius:5px;
+  border-radius: 5px;
   border-bottom: 2px solid transparent;
   transition: all 0.2s ease;
 
@@ -227,10 +226,10 @@
   display: flex;
   height: 9px;
   width: 9px;
-  border-radius:50%;
+  border-radius: 50%;
   background: white;
   margin: 0 0.2em;
-  
+
   &:nth-child(1) {
     animation: grow 3s ease infinite;
   }
@@ -244,10 +243,13 @@
   }
 }
 
-
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 button:disabled {
